# petpet_face

./: .gitignore  CHANGELOG.md  LICENSE  README.md  UPLOAD_TO_GITHUB.md
cpp/: CMakeLists.txt
cpp/include/petpet_face/: audio_muxer.hpp  face_detector.hpp  face_tracker.hpp  image_preprocessor.hpp  media_processor.hpp  petpet_renderer.hpp
cpp/src/: audio_muxer.cpp  face_detector.cpp  face_tracker.cpp  gui_main.cpp  image_preprocessor.cpp  main.cpp  media_processor.cpp  petpet_renderer.cpp
installer/: PetPetFace.iss
